--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "connect": "^3.4.1",
     "express": "^4.14.0",
     "express-handlebars": "^3.0.0",
+    "express-session": "^1.14.1",
     "jsonwebtoken": "^7.1.9",
     "mongoose": "^4.6.0",
     "morgan": "^1.7.0",
