--- a/package.json
+++ b/package.json
@@ -19,9 +19,9 @@
     "jsonwebtoken": "^7.1.9",
     "mongoose": "^4.6.0",
     "morgan": "^1.7.0",
-    "request": "^2.74.0"
+    "request": "^2.74.0",
+    "request-promise": "^4.1.1"
   },
-
   "engines": {
     "node": "6.1.0"
   }
