implemented view user's projects page

--- a/webflow.config
+++ b/webflow.config
@@ -3,6 +3,7 @@ module.exports = {
     templates: ['index',
   							'project',
   							'survey',
-  							'login'],
+  							'login',
+  							'viewprojects'],
   	folders: ['images', 'js', 'css']
   	};
