new feature : project can now be clicked to access their surveys

--- a/webflow.config
+++ b/webflow.config
@@ -4,6 +4,7 @@ module.exports = {
   							'project',
   							'survey',
   							'login',
-  							'viewprojects'],
+  							'viewprojects',
+  							'viewsurveys'],
   	folders: ['images', 'js', 'css']
   	};
