Added new webflow template view detailed survey information

--- a/webflow.config
+++ b/webflow.config
@@ -1,10 +1,11 @@
 module.exports = {
     layouts: ['main'],
     templates: ['index',
-  							'project',
-  							'survey',
   							'login',
-  							'viewprojects',
-  							'viewsurveys'],
+  							'newproject',
+  							'projects',
+  							'newsurvey',
+  							'survey',
+  							'surveys'],
   	folders: ['images', 'js', 'css']
   	};
