species front end

--- a/webflow.config
+++ b/webflow.config
@@ -3,9 +3,9 @@ module.exports = {
     templates: ['index',
   							'login',
   							'newproject',
-  							'projects',
   							'newsurvey',
-  							'survey',
-  							'surveys'],
+                'projects',
+  							'surveys',
+                'species'],
   	folders: ['images', 'js', 'css']
   	};
