add new species page and new button to add species on species list page

--- a/webflow.config
+++ b/webflow.config
@@ -1,11 +1,13 @@
 module.exports = {
-    layouts: ['main'],
-    templates: ['index',
-  							'login',
-  							'newproject',
-  							'newsurvey',
-                'projects',
-  							'surveys',
-                'species'],
-  	folders: ['images', 'js', 'css']
-  	};
+  layouts: ['main'],
+  templates: [
+    'index',
+		'login',
+		'newproject',
+		'newsurvey',
+    'newspecie',
+    'projects',
+		'surveys',
+    'species'],
+	folders: ['images', 'js', 'css']
+};
