--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node app.js",
-    "webflow": "node webflow.js"
+    "webflow": "node webflow.js",
+    "dev": "nodemon app.js"
   },
   "author": "Johan Codinha",
   "license": "MIT",
