incendital observation front end

--- a/webflow.config
+++ b/webflow.config
@@ -1,6 +1,7 @@
 module.exports = {
   layouts: ['main'],
   templates: [
+    'main',
     'index',
 		'login',
 		'newproject',
@@ -8,6 +9,7 @@ module.exports = {
     'newspecie',
     'projects',
 		'surveys',
-    'species'],
+    'species',
+    'new-general-obs'],
 	folders: ['images', 'js', 'css']
 };
